Fix text spacing on smaller displays

--- a/themes/simple/assets/static/css/base.scss
+++ b/themes/simple/assets/static/css/base.scss
@@ -66,6 +66,7 @@ article#homepage p {
 
 section.about-content {
     max-width: 800px;
+    width: 100%;
 }
 
 .content aside {
